# netdrift

./: Makefile  README.md  devices.vars.yml  inventory.yml  pyproject.toml  requirements.txt
intended/: r1.cfg  r2.cfg  r3.cfg
lab/: topo.clab.yml
netdrift/: cli.py  device.py  drift.py  inventory.py  metrics.py  reconcile.py  render.py
observability/: grafana-dashboard.json  prometheus.yml
templates/: frr.cfg.j2
tests/: test_drift.py  test_inventory.py
