[project]
name = "netdrift"
version = "0.1.0"
description = "GitOps-style config drift detection and self-healing for network devices"
requires-python = ">=3.10"
dependencies = [
    "netmiko>=4.3",
    "napalm>=5.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "prometheus-client>=0.20",
]

[project.urls]
Repository = "https://github.com/Pk8796/netdrift"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
netdrift = "netdrift.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["netdrift"]
